<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright 2013 Foxdog Studios Ltd

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/pref_streaming">
        <ListPreference
            android:key="pref_camera"
            android:title="@string/pref_camera" />
        <CheckBoxPreference
            android:key="pref_flash_light"
            android:title="@string/pref_flash_light"
            android:defaultValue="false" />
        <ListPreference
            android:key="pref_size"
            android:title="@string/pref_stream_resolution" />
        <ListPreference
            android:key="pref_jpeg_quality"
            android:title="@string/pref_stream_quality"
            android:inputType="number"
            android:entries="@array/pref_syncConnectionTypes_values"
            android:entryValues="@array/pref_syncConnectionTypes_values"
            android:defaultValue="50" />
    </PreferenceCategory>
</PreferenceScreen>

